--- a/1.html
+++ b/1.html
@@ -12,6 +12,9 @@
       font-size:45px;
       text-align: center;
     }
+    ol {
+      font-size:30px;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154162205-1"></script>
