--- a/3.html
+++ b/3.html
@@ -15,6 +15,10 @@
     ol {
       font-size:30px;
     }
+    .active {
+      color:red;
+      text-decoration: underline;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154162205-1"></script>
@@ -32,10 +36,10 @@
   <h2 style="text-align:center">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 ================================================================================
   <ol>
-    <li><a href="1.html" style="text-decoration:none">Show Yourself</a></li>
-    <li><a href="2.html" style="text-decoration:none">Karazhan Library</a></li>
-    <li><a href="3.html" style="color:red; text-decoration:underline">Youtube Study</a></li>
-    <li><a href="4.html" style="text-decoration:none">Game Industry Trends</a></li>
+    <li><a href="1.html">Show Yourself</a></li>
+    <li><a href="2.html">Karazhan Library</a></li>
+    <li><a href="3.html" class="active">Youtube Study</a></li>
+    <li><a href="4.html">Game Industry Trends</a></li>
   </ol>
 ================================================================================
 
@@ -264,7 +268,8 @@
     <a href="https://www.youtube.com/watch?v=u3Ph_M2bySg" target="_blank" title="무료 제작툴">
       웹 서비스 구현의 모든 것! 무료 제작툴 39개 몽땅 알려드림!</a><br>
 
-
+    <a href="https://www.youtube.com/watch?v=ksz_mSninEY" target="_blank" title="앱">
+      네이티브 앱 vs 크로크 플랫폼 앱 vs 하이브리드 앱 | 5분 장단점 분석</a><br>
 
 
 
@@ -317,10 +322,10 @@
   <br>
 ================================================================================
   <ol>
-    <li><a href="1.html" style="text-decoration:none">Show Yourself</a></li>
-    <li><a href="2.html" style="text-decoration:none">Karazhan Library</a></li>
-    <li><a href="3.html" style="color:red; text-decoration:underline">Youtube Study</a></li>
-    <li><a href="4.html" style="text-decoration:none">Game Industry Trends</a></li>
+    <li><a href="1.html">Show Yourself</a></li>
+    <li><a href="2.html">Karazhan Library</a></li>
+    <li><a href="3.html" class="active">Youtube Study</a></li>
+    <li><a href="4.html">Game Industry Trends</a></li>
   </ol>
 ================================================================================
 
