--- a/1.html
+++ b/1.html
@@ -15,6 +15,10 @@
     ol {
       font-size:30px;
     }
+    .active {
+      color:red;
+      text-decoration: underline;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154162205-1"></script>
@@ -32,10 +36,10 @@
   <h2 style="text-align:center">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 ================================================================================
   <ol>
-    <li><a href="1.html" style="color:red; text-decoration:underline">Show Yourself</a></li>
-    <li><a href="2.html" style="text-decoration:none">Karazhan Library</a></li>
-    <li><a href="3.html" style="text-decoration:none">Youtube Study</a></li>
-    <li><a href="4.html" style="text-decoration:none">Game Industry Trends</a></li>
+    <li><a href="1.html" class="active">Show Yourself</a></li>
+    <li><a href="2.html">Karazhan Library</a></li>
+    <li><a href="3.html">Youtube Study</a></li>
+    <li><a href="4.html">Game Industry Trends</a></li>
   </ol>
 ================================================================================
   <br><br>
