--- a/4.html
+++ b/4.html
@@ -15,6 +15,10 @@
     ol {
       font-size:30px;
     }
+    .active {
+      color:red;
+      text-decoration: underline;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154162205-1"></script>
@@ -32,10 +36,10 @@
   <h2 style="text-align:center">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 ================================================================================
   <ol>
-    <li><a href="1.html" style="text-decoration:none">Show Yourself</a></li>
-    <li><a href="2.html" style="text-decoration:none">Karazhan Library</a></li>
-    <li><a href="3.html" style="text-decoration:none">Youtube Study</a></li>
-    <li><a href="4.html" style="color:red; text-decoration:underline">Game Industry Trends</a></li>
+    <li><a href="1.html">Show Yourself</a></li>
+    <li><a href="2.html">Karazhan Library</a></li>
+    <li><a href="3.html">Youtube Study</a></li>
+    <li><a href="4.html" class="active">Game Industry Trends</a></li>
   </ol>
 ================================================================================
 
@@ -83,15 +87,17 @@
     <a href="https://www.youtube.com/watch?v=yVWm-qsnUEM" target="_blank" title="한국모바일게임">
       한국 모바일 게임이 돈을 많이 버는 이유</a><br>
 
+    <a href="https://www.youtube.com/watch?v=OhEDQKQdNU8" target="_blank" title="뇌파">
+      뇌파를 이용하여 플레이하는 게임</a><br>
 
 
   <br>
 ================================================================================
   <ol>
-    <li><a href="1.html" style="text-decoration:none">Show Yourself</a></li>
-    <li><a href="2.html" style="text-decoration:none">Karazhan Library</a></li>
-    <li><a href="3.html" style="text-decoration:none">Youtube Study</a></li>
-    <li><a href="4.html" style="color:red; text-decoration:underline">Game Industry Trends</a></li>
+    <li><a href="1.html">Show Yourself</a></li>
+    <li><a href="2.html">Karazhan Library</a></li>
+    <li><a href="3.html">Youtube Study</a></li>
+    <li><a href="4.html" class="active">Game Industry Trends</a></li>
   </ol>
 ================================================================================
 
