--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
   <title>GRUZAM ENTERTAINMENT</title>
   <meta charset="utf-8">
   <style>
-    a {
-      color:black;
-      text-decoration: underline silver;
-    }
-    h1 {
-      font-size:45px;
-      text-align: center;
-    }
-    ol {
-      font-size:30px;
-    }
+  a {
+    color:black;
+    text-decoration: underline silver;
+  }
+  h1 {
+    font-size:45px;
+    text-align: center;
+  }
+  ol {
+    font-size:30px;
+  }
+  .active {
+    color:red;
+    text-decoration: underline;
+  }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154162205-1"></script>
@@ -28,17 +32,19 @@
 </head>
 
 <body>
-  <h1><a href="index.html" style="color:black; text-decoration:underline">
+  <h1><a href="index.html" class="active">
     GRUZAM ENTERTAINMENT</a></h1>
   <h2 style="text-align:center">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
+
 ================================================================================
   <ol>
-    <li><a href="1.html" style="text-decoration:none">Show Yourself</a></li>
-    <li><a href="2.html" style="text-decoration:none">Karazhan Library</a></li>
-    <li><a href="3.html" style="text-decoration:none">Youtube Study</a></li>
-    <li><a href="4.html" style="text-decoration:none">Game Industry Trends</a></li>
+    <li><a href="1.html">Show Yourself</a></li>
+    <li><a href="2.html">Karazhan Library</a></li>
+    <li><a href="3.html">Youtube Study</a></li>
+    <li><a href="4.html">Game Industry Trends</a></li>
   </ol>
 ================================================================================
+
 
   <!--
   <ol>
@@ -98,12 +104,12 @@
 
 ================================================================================
   <ol>
-    <li><a href="1.html" style="text-decoration:none">Show Yourself</a></li>
-    <li><a href="2.html" style="text-decoration:none">Karazhan Library</a></li>
-    <li><a href="3.html" style="text-decoration:none">Youtube Study</a></li>
-    <li><a href="4.html" style="text-decoration:none">Game Industry Trends</a></li>
+    <li><a href="1.html" class="active">Show Yourself</a></li>
+    <li><a href="2.html">Karazhan Library</a></li>
+    <li><a href="3.html">Youtube Study</a></li>
+    <li><a href="4.html">Game Industry Trends</a></li>
   </ol>
-==============================================================================
+================================================================================
 
 
 </body>
