--- a/1.html
+++ b/1.html
@@ -330,6 +330,7 @@
 
       <a href="" target="_blank" title="브루스 립튼">
         가난과 부자가 어떻게 프로그램되는지 설명합니다</a>
+
           <p>
             그래서 잠재적 마인드를 훈련시키는 방법은 2가지입니다.
             최면과 반복입니다.
@@ -343,6 +344,15 @@
             Repetition is habit. It's making habits.
             So you got to do somthing religiously in a sense of repeating it.
           </p>
+
+      <a href="https://www.youtube.com/watch?v=PhcSz3nh8m8" target="_blank" title="구글 엔지니어">
+        인생 변화를 위한 구글 엔지니어의 30일 도전</a>
+
+         <p>
+           I learned that when I made small, sustainable changes,
+           things I could keep doing, they were more likely to stick.
+         </p>
+
 
 
   <br>
