--- a/3.html
+++ b/3.html
@@ -271,6 +271,10 @@
     <a href="https://www.youtube.com/watch?v=ksz_mSninEY" target="_blank" title="앱">
       네이티브 앱 vs 크로크 플랫폼 앱 vs 하이브리드 앱 | 5분 장단점 분석</a><br>
 
+    <a href="https://www.youtube.com/watch?v=1emZgLiGE4s" target="_blank" title="쿠키">
+      페이스북과 쿠키의 상관관계? Cookie 기본개념 잡아드림</a>
+
+
 
 
   <h2>알고리즘투게더</h2>
@@ -317,6 +321,9 @@
 
     <a href="https://www.youtube.com/watch?v=lyW4eN2tvrQ" target="_blank" title="블랙머니">
       아찔했던 순간.. 대한민국, 리만 브라더스 인수를 시도하다</a><br>
+
+    <a href="" target="_blank" title="렌즈">
+      한국 남성 근시율 96.5%!? 이만하면 렌즈도 우리나라가 최강 아닙니까?</a><br>
 
 
   <br>
