--- a/index.html
+++ b/index.html
@@ -3,23 +3,8 @@
 <head>
   <title>GRUZAM ENTERTAINMENT</title>
   <meta charset="utf-8">
-  <style>
-  a {
-    color:black;
-    text-decoration: underline silver;
-  }
-  h1 {
-    font-size:45px;
-    text-align: center;
-  }
-  ol {
-    font-size:30px;
-  }
-  .active {
-    color:red;
-    text-decoration: underline;
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154162205-1"></script>
   <script>
@@ -34,17 +19,15 @@
 <body>
   <h1><a href="index.html" class="active">
     GRUZAM ENTERTAINMENT</a></h1>
-  <h2 style="text-align:center">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
+  <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 
-================================================================================
-  <ol>
-    <li><a href="1.html">Show Yourself</a></li>
-    <li><a href="2.html">Karazhan Library</a></li>
-    <li><a href="3.html">Youtube Study</a></li>
-    <li><a href="4.html">Game Industry Trends</a></li>
+<div id="grid">
+  <ol class="table">
+    <li><a href="1_show_yourself.html">Show Yourself</a></li>
+    <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
+    <li><a href="3_youtube_study.html">Youtube Study</a></li>
+    <li><a href="4_game_industry_trends.html">Game Industry Trends</a></li>
   </ol>
-================================================================================
-
 
   <!--
   <ol>
@@ -54,63 +37,57 @@
   </ol>
   -->
 
-  <br><br>
-  <img src="Warofgenesis_iolin.jpg" width="100%">
+  <div id="contents">
+    <img src="Warofgenesis_iolin.jpg" width="100%">
 
-  <p style="margin-top:45px;">
-    <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/a2F6M4CLHcI"
-    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
+    <p style="margin-top:45px;">
+      <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/a2F6M4CLHcI"
+      frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
 
-  <input type="checkbox">
-  <input type="checkbox">
-  <input type="checkbox">
+    <input type="checkbox">
+    <input type="checkbox">
+    <input type="checkbox">
 
-  <div id="disqus_thread"></div>
-  <script>
+    <div id="disqus_thread"></div>
+    <script>
 
-  /**
-  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-  /*
-  var disqus_config = function () {
-  this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-  };
-  */
-  (function() { // DON'T EDIT BELOW THIS LINE
-  var d = document, s = d.createElement('script');
-  s.src = 'https://http-localhost-index-html.disqus.com/embed.js';
-  s.setAttribute('data-timestamp', +new Date());
-  (d.head || d.body).appendChild(s);
-  })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://http-localhost-index-html.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/5decb28043be710e1d211516/default';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
-  </script>
-  <!--End of Tawk.to Script-->
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5decb28043be710e1d211516/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 
-================================================================================
-  <ol>
-    <li><a href="1.html" class="active">Show Yourself</a></li>
-    <li><a href="2.html">Karazhan Library</a></li>
-    <li><a href="3.html">Youtube Study</a></li>
-    <li><a href="4.html">Game Industry Trends</a></li>
-  </ol>
-================================================================================
 
+  </div>
+</div>
 
 </body>
 </html>
