--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -17,14 +17,14 @@
 </head>
 
 <body>
-  <h1><a href="index.html" style="text-decoration:none">GRUZAM ENTERTAINMENT</a></h1>
+  <h1><a href="index.html" class="inactive">GRUZAM ENTERTAINMENT</a></h1>
   <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 
 <div id="grid">
   <ol class="table">
-    <li><a href="1_show_yourself.html">Show Yourself</a></li>
-    <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
-    <li><a href="3_youtube_study.html">Youtube Study</a></li>
+    <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="active">Game Industry Trends</a></li>
   </ol>
 
@@ -86,8 +86,11 @@
       <a href="https://www.youtube.com/watch?v=SZdjQ4dC7KA" target="_blank" title="던파">
         2019 던전앤파이터 페스티벌 현장반응 하이라이트</a><br>
 
-      <a href="" target="_blank" title="이상한게임">
+      <a href="https://www.youtube.com/watch?v=VOcPoVr-cK8" target="_blank" title="이상한게임">
         99%의 게이머가 클리어하지 못하는 이상한게임</a><br>
+
+      <a href="https://www.youtube.com/watch?v=JkGHLapIKKE" target="_blank" title="듀랑고">
+        듀랑고 서비스 종료의 진정한 의미</a><br>
 
     <br>
 
