--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 <div id="grid">
   <ol class="table">
-    <li><a href="1_show_yourself.html">Show Yourself</a></li>
-    <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
-    <li><a href="3_youtube_study.html">Youtube Study</a></li>
-    <li><a href="4_game_industry_trends.html">Game Industry Trends</a></li>
+    <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
+    <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
   </ol>
 
   <!--
