--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -17,16 +17,16 @@
 </head>
 
 <body>
-  <h1><a href="index.html" style="text-decoration:none">
+  <h1><a href="index.html" class="inactive">
     GRUZAM ENTERTAINMENT</a></h1>
   <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 
 <div id="grid">
   <ol class="table">
     <li><a href="1_show_yourself.html" class="active">Show Yourself</a></li>
-    <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
-    <li><a href="3_youtube_study.html">Youtube Study</a></li>
-    <li><a href="4_game_industry_trends.html">Game Industry Trends</a></li>
+    <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
+    <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
   </ol>
 
   <div id="contents">
@@ -441,9 +441,68 @@
             좋은 대화를 나누지 않는 것은 그 많은 보물을 버리는 것과 같습니다.
             좋은 대화가 만들어지고 사람들로부터 마음을 열게하는 사람이 되는 순간은
             말재주가 아닌 말센스를 갖춘 순간부터입니다.
+          </p>
 
       <a href="https://www.youtube.com/watch?v=g8C90_fYGb0" target="_blank" title="주역">
-        세상의 원리를 통해 미래를 꿰뚫어보는 전설적인 책</a>
+        세상의 원리를 통해 미래를 꿰뚫어보는 전설적인 책</a><br>
+
+      <a href="" target="_blank" title="스트레스">
+        스트레스를 알아야 당신 편이 됩니다|켈리 맥고니걸</a>
+
+        <p>
+          스트레스에 대한 생각을 바꾸면 스트레스에 대한 신체 반응을 바꿀 수 있습니다.
+          옥시토신은 신경 호르몬입니다.
+          당신 뇌의 사회적 본능을 미세하게 조정합니다.
+          옥시토신은 사람이 친한 관계를 강화하도록 준비를 시킵니다.
+          옥시토신은 당신의 가족, 친구들과 물리적 접촉을 하고 싶도록 만듭니다.
+          공감 능력을 강화시킵니다.
+          아끼는 사람들을 기꺼이 돕고 지지하도록 만듭니다.
+          하지만 대부분의 사람들이 옥시토신에 대해 이해하지 못하는 것이 있는데
+          그것이 스트레스 호르몬이라는 사실입니다.
+          당신의 뇌하수체는 스트레스 반응으로 이 물질을 분출합니다.
+          이것은 아드레날린이 사람의 심장을 뛰게 하는 것과 같은 스트레스 반응의 일부입니다.
+          그리고 스트레스 반응으로 옥시토신이 분비될 때
+          지지해줄 대상을 찾도록 당신을 자극합니다.
+          당신의 생물학적 스트레스 반응은 당신이 느낀 것을 다른 사람에게 말하도록 자극합니다.
+          당신의 스트레스 반응은 누군가 힘들어하고 있을 때
+          그것을 알고 있는지 확인하고 싶어합니다.
+          그래서 서로 도와줄 수가 있는 것이죠.
+          옥시토신은 뇌에만 영향을 주는 것이 아니라 당신의 신체에도 영향을 미칩니다.
+          그리고 신체에서 주된 역할은 스트레스의 영향에서 당신의 심혈관계를 보호하는 것입니다.
+          천연 소염제인 것이죠.
+          또한 옥시토신은 스트레스를 받는 동안 혈관을 이완된 상태로 있게 도와줍니다.
+          당신의 심장은 이 호르몬을 위한 수용체를 가지고 있습니다.
+          그리고 옥시토신은 심장세포가 재생하고 치유되게 도움을 줍니다.
+          스트레스가 어떠한 손상을 받았어도 말입니다.
+          이 스트레스 호로몬은 심장을 강하게 합니다.
+          이러한 옥시토신의 물리적 이점은 사회적 접촉과 사회적 지지에 의해서 강화됩니다.
+          그래서 당신이 스트레스를 받는 다른 사람에게 다가가 도움을 주거나 받을 때
+          당신은 이 호르몬을 더 분비하게 됩니다.
+          스트레스 반응이 더 건강해지고 스트레스로부터 더 빠르게 회복됩니다.
+          스트레스 반응이 스트레스 회복성을 위해 몸에 내장된 메커니즘이라는 사실은 놀랍습니다.
+          그리고 이 메커니즘은 사람과의 관계입니다.
+          다른 사람들에게 관심을 갖는데 시간을 보낸 이들은
+          스트레스와 관련된 사망률 증가를 전혀 보이지 않았습니다.
+          보살피는 것은 회복력을 만들어냅니다.
+          스트레스가 건강에 미치는 해로운 영향은 불가피한 것이 아닙니다.
+          어떻게 생각하고 행동하느냐가 스트레스에 대한 경험을 바꿀 수 있습니다.
+          당신이 스트레스 반응을 유익하게 여기기로 결정한다면
+          당신은 용기의 생물학을 창조하는 것입니다.
+          당신이 스트레스를 받고 있는 다른 이들과 연락하기로 결정할 때
+          당신은 회복력을 창조하는 것입니다.
+
+          스트레스는 우리가 마음에 접급할 수 있게 합니다.
+          다른 사람들과 함께 즐거움과 의미를 찾는 연민의 마음은
+          그리고 당신의 뛰는 심장은
+          당신에게 힘과 에너지를 주기 위해 열심히 일합니다.
+          당신이 스트레스를 이런 방식으로 바라보기로 선택할 때
+          당신의 신체는 당신을 믿을 것이고 스트레스 반응은 더 건강하게 바뀝니다.
+          스트레스에 더욱 잘 대처할 뿐만 아니라
+          당신은 사실 아주 심오한 선언을 하는 것입니다.
+          삶의 도전과제들을 통제하는 것에 대해 스스로를 믿을 수 있다고 말하는 것이고
+          그 도전을 나 홀로 맞서는게 아님을 기억하는 것입니다.
+        </p>
+
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="active">Show Yourself</a></li>
