--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -17,15 +17,15 @@
 </head>
 
 <body>
-  <h1><a href="index.html" style="text-decoration:none">GRUZAM ENTERTAINMENT</a></h1>
+  <h1><a href="index.html" class="inactive"">GRUZAM ENTERTAINMENT</a></h1>
   <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 
 <div id="grid">
   <ol class="table">
-    <li><a href="1_show_yourself.html">Show Yourself</a></li>
+    <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
     <li><a href="2_karazhan_library.html" class="active">Karazhan Library</a></li>
-    <li><a href="3_youtube_study.html">Youtube Study</a></li>
-    <li><a href="4_game_industry_trends.html">Game Industry Trends</a></li>
+    <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
+    <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
   </ol>
 
   <div id="contents">
@@ -53,7 +53,8 @@
       [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단
     <h3><strong>소설</h3></strong>
       [82년생 김지영]-조남주<br>
-      [잠]-베르나르 베르베르
+      [잠]-베르나르 베르베르<br>
+      [삼국지]-나관중
     </p></pre>
 
     <p style="margin-top:45px;"><pre>
@@ -68,6 +69,7 @@
         <li>경영: [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</li>
         <li>소설: [82년생 김지영]-조남주</li>
         <li>소설: [잠]-베르나르 베르베르</li>
+        <li>소설: [삼국지]-나관중</li>
     </p></pre>
 
     <p><pre>
