--- a/3_youtube_study.html
+++ b/3_youtube_study.html
@@ -17,15 +17,15 @@
 </head>
 
 <body>
-  <h1><a href="index.html" style="text-decoration:none">GRUZAM ENTERTAINMENT</a></h1>
+  <h1><a href="index.html" class="inactive">GRUZAM ENTERTAINMENT</a></h1>
   <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 
 <div id="grid">
   <ol class="table">
-    <li><a href="1_show_yourself.html">Show Yourself</a></li>
-    <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
+    <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="active">Youtube Study</a></li>
-    <li><a href="4_game_industry_trends.html">Game Industry Trends</a></li>
+    <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
   </ol>
 
   <div id="contents">
@@ -52,7 +52,7 @@
 
     <p>
     자신의 뇌를 이기는 장사는 없다고 생각합니다.
-    <strong><u>공부의 효용</u>을 뇌에게 자주 증명</strong>해보인다면
+    공부의 효용을 뇌에게 자주 증명해보인다면
     우리의 뇌는 공부를 좋아하게 될 것입니다.
     </p>
 
