--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -26,6 +26,7 @@
     <li><a href="2_karazhan_library.html" class="active">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
   </ol>
 
   <div id="contents">
@@ -37,7 +38,8 @@
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
       [대한민국 부동산 흐름 읽는법]-신진수<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
-      [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복
+      [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
+      [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희
@@ -70,6 +72,7 @@
         <li>소설: [82년생 김지영]-조남주</li>
         <li>소설: [잠]-베르나르 베르베르</li>
         <li>소설: [삼국지]-나관중</li>
+        <li>경제: [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척</li>
     </p></pre>
 
     <p><pre>
@@ -83,10 +86,11 @@
     <br>
 
     <ol class="table">
-      <li><a href="1_show_yourself.html" style="text-decoration:none">Show Yourself</a></li>
-      <li><a href="2_karazhan_library.html" style="color:red; text-decoration:underline">Karazhan Library</a></li>
-      <li><a href="3_youtube_study.html" style="text-decoration:none">Youtube Study</a></li>
-      <li><a href="4_game_industry_trends.html" style="text-decoration:none">Game Industry Trends</a></li>
+      <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
+      <li><a href="2_karazhan_library.html" class="active">Karazhan Library</a></li>
+      <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
+      <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+      <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
     </ol>
 
   </div>
