--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -26,6 +26,7 @@
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="active">Game Industry Trends</a></li>
+    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
   </ol>
 
   <div id="contents">
@@ -92,13 +93,57 @@
       <a href="https://www.youtube.com/watch?v=JkGHLapIKKE" target="_blank" title="듀랑고">
         듀랑고 서비스 종료의 진정한 의미</a><br>
 
+      <a href="" target="_blank" title="게임시장">
+        3N, 한국 게임 시장의 문제와 해결법</a>
+
+        <p>
+          * 게임 중독에 대한 유명한 질답<br>
+          엄마: 아들이 게임 중독이라 걱정입니다.
+          어느 날 아들이 제 카드에 100만원이 넘는 돈을 몰래 과금했는데
+          남편에게 말해 혼내봐도 아이는 자기가 큰 돈을 마음대로 쓴 건 잘못한 거지만
+          친구들에게 잘 보이려 정말 그 아이템이 없으면 안되는 거라고
+          엄마 아빠가 그런 거 하나 못해주냐 도리어 역정을 내는 거 있죠.
+          아이가 게임에 미쳐 제정신이 아닌 것 같습니다.<br>
+          답변: 질문자님의 아이는 게임에 미 100만원을 쓴 바보나 중독자가 아니라
+          100만원을 쓰지 않고는 자신이 얼마나 귀한 존재인지를
+          좀처럼 실감할 수 없었던 슬픈 소년입니다.
+          질문자님의 관심이 향해야 할 곳은 질문자님의 게임중독자 아이가 아니라
+          이 세상에서 내가 귀한 것을 누가 좀 알아달라고
+          목놓아 외치고 있는 바로 그 슬픈 소년일 것입니다.
+        </p>
+
+     <a href="https://www.youtube.com/watch?v=DuF21rMsnp0" target="_blank" title="코지마히데오">
+       박찬욱도 극찬한 천재 개발자의 시련, 그리고 재도전|코지마히데오의 데스스트랜딩</a>
+
+       <p>
+         사람들이 코지마를 천재, 혹은 감독이라고 칭하는 이유는
+         그가 단순히 게임만 잘 만들어서가 아닙니다.
+         그저 게임을 잘 만드는 것을 넘어
+         주제 의식을 게임의 플레이와 연출에 '밀접하게' 결합하기 때문입니다.
+         영화감독들이 컷 하나하나에 자신의 의도를 담아내듯
+         코지마는 게임 속 플레이와 연출에 자신의 의도와 메시지를 담아낸단 말이죠.
+         일례로 그는 메탈기어 시리즈 하나에서도
+         '디지털 시대에 진실이란 구분될 수 있는가'
+         '무엇이 사람의 운명을 결정하고 세대를 잇게 하는가' 등
+         무게감 있는 메시지를 게임 속 각종 장치들과 연결해 보여줬습니다.
+         일각에서는 그의 이런 성향 때문에
+         게임을 플레이하는 것보다 '보고 듣는게' 더 많다고 불평하기도 합니다.
+         하지만 이런 이들도 코지마가 연출을 통해 전하려는 감정이
+         플레이 없인 제대로 느낄 수 없는
+         '게임의 일부'라는 것은 부정할 수 없을 것입니다.
+         이런 작품관 덕에 코지마 감독은 단단한 마니아층을 가진 몇 안되는 개발자이자
+         영화계 인사들에게 많이 알려져 있고 또 극찬 받는 개발자가 됐습니다.
+       </p>
+
+
     <br>
 
     <ol class="table">
-      <li><a href="1_show_yourself.html">Show Yourself</a></li>
-      <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
-      <li><a href="3_youtube_study.html">Youtube Study</a></li>
+      <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
+      <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
+      <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
       <li><a href="4_game_industry_trends.html" class="active">Game Industry Trends</a></li>
+      <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
     </ol>
   </div>
 </div>
