--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -27,12 +27,13 @@
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
   </ol>
 
   <div id="contents">
     <img src="Frozen2_2.jpg" width="100%">
 
-    <h1>SHOW YOURSELF</h1><br><br><br>
+    <h1>Show Yourself</h1><br><br><br>
 
       <a href="https://www.youtube.com/watch?v=AOPue13SZe8" target="_blank" title="루틴">
         성공하는 사람에겐 그만의 '루틴(routine)'이 있다!</p>
@@ -503,13 +504,72 @@
           그 도전을 나 홀로 맞서는게 아님을 기억하는 것입니다.
         </p>
 
+      <a href="https://www.youtube.com/watch?v=SuMGYCQ0BWM" target="_blank" title="대체불가능">
+        누구도 대신할 수 없는 존재가 되는 유일한 3가지 방법</a>
 
-      <ol class="table">
-        <li><a href="1_show_yourself.html" class="active">Show Yourself</a></li>
-        <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
-        <li><a href="3_youtube_study.html">Youtube Study</a></li>
-        <li><a href="4_game_industry_trends.html">Game Industry Trends</a></li>
-      </ol>
+        <p>
+          린치핀(linchpin)은 자동차의 두 바퀴를 연결하는 쇠막대기를 고정하는 핀으로서
+          반드시 필요한 핵심 존재를 말합니다.<br>
+          * 린치핀이 될 수 있는 방법 3가지<br>
+          1. 자신의 분야에서 예술가가 되어라!<br>
+          평범한 톱니바퀴가 되어 수동적으로 일하는 대신
+          누구도 지시하지 않은 일을 하는 것
+          전통적인 기술, 도구, 시스템을 새로운 방식으로 활용할 때
+          그것이 바로 '예술'이 됩니다.<br>
+          2. 많은 지식은 쓸모없다. 통찰력과 깊은 지식이 중요하다.<br>
+          여러가지 지식을 하나로 묶어서
+          또다른 하나의 지식을 창출할 수 있는 통찰력과 지혜가 필요합니다.
+          통찰력과 지혜는 살아있는 경험에서 우러나오는 실전 지식에서 나옵니다.
+          따라서 두려움과 게으름을 떨치고 많은 것에 도전하고
+          그것들을 경험해보아야 합니다.
+          또한 책을 많이 읽는 것도 중요합니다.
+          책을 통해 한 분야의 지식을 깊이 파고들어야 합니다.
+          책을 읽을 때는 수동적을로 내용을 받아들이기만 하는 것이 아니라
+          비판적인 시선에서 내 생각과 결합하 지식을 받아들이고 평가하는 습관이 필요합니다.
+          전문지식만으로는 꼭 필요한 사람이 되지 못합니다.
+          지식은 영리한 결정과 너그러운 헌식이 결합할 때에만 변화를 만들어냅니다.<br>
+          3. 자신의 숨겨진 진정한 재능을 발굴하라!<br>
+          린치핀이 되기 위해 둘 중 하나를 선택해야 합니다.
+          독특한 재능을 찾아 갈고닦는 것과
+          자신을 린피핀으로 만들어줄 다른 소질을 계발하는 것입니다.<br>
+          1) 더 특별하게 즐거움과 기쁨을 느끼는 분야가 '재능'일 가능성이 있다.<br>
+          2) 다양한 분야에서 여러가지를 시도하고 경험해보아야 한다.<br>
+          3) 틈날 때마다 자기 내면과 대화를 해야한다.
+        </p>
+
+     <a href="https://www.youtube.com/watch?v=yivLVe_SSII&list=WL&index=4&t=0s" target="_blank" title="대처법">
+       무시당하지 않는 2가지 방법</a><br>
+
+     <a href="https://www.youtube.com/watch?v=uDL0e4SIcg8" target="_blank" title="워렌버핏">
+       워렌 버핏의 조언</a>
+
+       <p>
+         여러분이 할 수 있는 최고의 투자는 자기 자신입니다.
+         자기 자신에 투자하면, 누구도 그것을 가져갈 수 없습니다.
+         하나의 마음과 몸으로 인생을 살아가야 한다는 걸 기억한다면,
+         이제 가장 중요한 것은 여러분이 누구와 교류하는지 입니다.
+         여러분은 자신보다 나은 사람과 어울리고 싶을 겁니다.
+         기본적으로 당신은 당신과 교류하는 사람들의 방향으로 가게 될 겁니다.
+         누군가를 따라하고 싶다면, 그 대상을 매우 신중하게 고르는게 좋겠죠.
+
+         투자를 할 때 사람들이 하는 가장 큰 실수는?
+         사람들은 거래할 수 있기 때문에 거래해야 한다고 생각해요.
+         그들이 여기저기 옮겨다닐 수 있기 때문에 여기저기 옮겨다니지만,
+         이건 똑똑한 투자 방법이 아닙니다.
+       </p>
+
+
+
+
+
+
+       <ol class="table">
+         <li><a href="1_show_yourself.html" class="active">Show Yourself</a></li>
+         <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
+         <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
+         <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+         <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+       </ol>
 
   </div>
 </div>
