--- a/3_youtube_study.html
+++ b/3_youtube_study.html
@@ -26,6 +26,7 @@
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="active">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
   </ol>
 
   <div id="contents">
@@ -38,6 +39,7 @@
     <li>노마드코더</li>
     <li>알고리즘투게더</li>
     <li>슈카월드</li>
+    <li>에스오디</li>
   </ul>
 
   <h2>생활코딩</h2>
@@ -340,13 +342,20 @@
     <a href="https://www.youtube.com/watch?v=vMgcTTE_YQI" target="_blank" title="불닭볶음면">
       한국산 불닭볶음면, 세계 라면계를 강타하다!?</a><br>
 
+  <h2>에스오디</h2>
+
+    <a href="https://www.youtube.com/watch?v=cI1lGlCSkIQ" target="_blank" title="신기술">
+      삼성의 비장의 무기, 모든 학과가 투입되는 신의 기술</a>
+
+
   <br>
 
   <ol class="table">
-    <li><a href="1_show_yourself.html">Show Yourself</a></li>
-    <li><a href="2_karazhan_library.html">Karazhan Library</a></li>
+    <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="active">Youtube Study</a></li>
-    <li><a href="4_game_industry_trends.html">Game Industry Trends</a></li>
+    <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
   </ol>
 
   </div>
