--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -558,6 +558,10 @@
          이건 똑똑한 투자 방법이 아닙니다.
        </p>
 
+      <a href="https://www.youtube.com/watch?v=QlCipvBKCDg" target="_blank" title="즉각적만족">
+        앞서가는 사람들의 비밀 | 즉각적인 만족에서 벗어나기</a>
+
+
 
 
 
