--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -135,6 +135,10 @@
          영화계 인사들에게 많이 알려져 있고 또 극찬 받는 개발자가 됐습니다.
        </p>
 
+      <a href="" target="_blank" title="리니지2M">
+        상식적으로는 이해불가능한 상황. 리니지2M은 왜 잘 나갈까</a><br>
+
+        
 
     <br>
 
