--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -46,6 +46,10 @@
         5. 잘 아는 종목 중심으로 투자하며, 계란은 한 바구니에 담지 말라
       </p>
 
+    <a href="https://www.youtube.com/watch?v=QDhAXJnQ-EY" target="_blank" title="PER, PBR">
+      PER, PBR이랑 무엇인가</a>
+      
+
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
