--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -445,7 +445,7 @@
           </p>
 
       <a href="https://www.youtube.com/watch?v=g8C90_fYGb0" target="_blank" title="주역">
-        세상의 원리를 통해 미래를 꿰뚫어보는 전설적인 책</a><br>
+        세상의 원리를 통해 미래를 꿰뚫어보는 전설적인 책</a><br><br>
 
       <a href="" target="_blank" title="스트레스">
         스트레스를 알아야 당신 편이 됩니다|켈리 맥고니걸</a>
@@ -538,7 +538,7 @@
         </p>
 
      <a href="https://www.youtube.com/watch?v=yivLVe_SSII&list=WL&index=4&t=0s" target="_blank" title="대처법">
-       무시당하지 않는 2가지 방법</a><br>
+       무시당하지 않는 2가지 방법</a><br><br>
 
      <a href="https://www.youtube.com/watch?v=uDL0e4SIcg8" target="_blank" title="워렌버핏">
        워렌 버핏의 조언</a>
@@ -559,9 +559,124 @@
        </p>
 
       <a href="https://www.youtube.com/watch?v=QlCipvBKCDg" target="_blank" title="즉각적만족">
-        앞서가는 사람들의 비밀 | 즉각적인 만족에서 벗어나기</a>
+        앞서가는 사람들의 비밀 | 즉각적인 만족에서 벗어나기</a><br><br>
 
+      <a href="https://www.youtube.com/watch?v=hVIHsDGrPgM" target="_blank" title="브루스립튼">
+        블스 립튼 박사 | 동기부여</a>
 
+        <p>
+          당신은 50조의 세포로 이루어져 있습니다.
+          그리고 그 세포들은 살아있는 독립체입니다.
+          그래서 여러분은 공동체이지 하나의 사람이 아닌 겁니다.
+          하지만 당신의 정신은 50조 세포를 위한 중앙정부입니다.
+          당신 몸속의 각 세포는
+          안쪽엔 마이너스 전압을, 바깥쪽엔 플러스 전압을 가지고 있죠.
+          살아있는 모든 세포는 베터리입니다.
+          모든 세포는 약 1.4v의 전압을 가지고 있습니다.
+          몸속에 있는 50초 세포 곱하기 1.4v를 하면 700조의 전압이
+          당신의 몸에 있다는 것이 됩니다.
+          훈련과 명상으로 당신은 '기'라고 부르는 에너지에 집중할 수 있고
+          그 에너지를 치료에도 이용할 수 있습니다.
+          당신은 자신을 물리적 독립체라고 생각하는 반면
+          새로운 물리학은 당신을 서로 상호작용하는 에너지 파동으로 봅니다.
+          모든 동물과 식물들은 진동으로 소통을 합니다.
+          가젤은 사자에게 가서 "내 친구야?"라고 말하지 않아도 됩니다.
+          먼 거리에서도 에너지를 느끼고 나쁜 진동 때문에 가젤은 그곳에 가지 않게 되죠.
+          어렸을 때 우리가 진동에 예민하도록 교육을 받았다면
+          나쁜 관계나 나쁜 장소에서 허우적거리지 않았을 것입니다.
+          그런데 우리는 보통 느낌으로 행동하지 말고
+          사람들의 말에 귀를 기울이라는 말들을 하는데
+          "언어는 느낌을 숨기기 위해 디자인 되었습니다"
+          "Language was desiged to hide feelings"
+          요점은 모든 유기체는 진동으로 소통하고
+          그 진동을 해석하여 좋은 곳에 있는지, 나쁜 곳에 있는지를 알게 됩니다.
+          그러나 우리 인간은 그 능력을 가지고 있으나
+          그 능력을 사용하는 훈련을 받지 못했습니다.
+          우리가 사람들을 볼 때, 내가 관객을 보거나 당신이 우리를 보는 것처럼,
+          우리는 사람들을 물리적인 입자와 기계처럼 보는데요.
+          그건 눈에 보이지 않는 환영이죠.
+          왜냐하면 우리란 존재는 상호작용을 하는 파동이기 때문이죠.
+          그래서 단지 옆에 있는 것만으로 한 사람이 다른 사람에게 영향을 줄 수 있죠.
+          이제 당신의 생각이 어떻게 밖으로 나와서 외부의 삶에 영향을 주는지 보여 줄게요.
+
+          당신의 생각은 머리에 담겨 있는게 아닙니다.
+          제가 말한 것처럼, 사람들은 입자가 아니라 파동입니다.
+          그리고 파동은 서로 얽히게 됩니다.
+          당신과 연결된 사람들은 당신이 얽히게 된 사람들입니다.
+          당신이 누군가에 대해 매우 긍정적인 생각을 하면
+          그들은 당신과 연락을 하려고 노력을 합니다.
+          단, 그것은 양방향으로 작동합니다.
+          만약 당신이 누군가에 대해 부정적인 생각을 가지고 있으면
+          그들이 어느 곳에 있든, 그들은 당신에 대해 부정적인 말을 만들 것입니다.
+          그래서 당신의 생각과 판단이 당신뿐만 아니라 당신이 언급한 사람들에게도
+          연결된다는 것을 인식하는 것은 너무나 중요한 일입니다.
+          당신은 뇌의 음향 생성기와 같습니다.
+          당신의 생각을 방송하고 있는 것이죠.
+          당신이 두려움 속에 살고 있다면 달라이 라마(긍정)를 활성화시키지 못하지만
+          스카페이스(갱스터 범죄자-부정)가 나타나게는 할 수 있을 겁니다.
+          당신이 생각을 가지고 있을 때
+          이 세상에 당신 생각과 연결된 것들을 즐기고 활성화시키는 것이죠.
+          강도가 거리를 걷고 있는 사람들 중에 공격할 대상을 고를 때
+          과연 어떤 사람이 공격을 당할 것이라고 생각합니까?
+          가장 두려워하는 사람입니다.
+
+          당신을 한 번 보세요. 당신은 하나의 독립체가 아니라 50조 세포의 공동체입니다.
+          공동체라는 단어를 이해하는 것이 매우 중요합니다.
+          모든 세포는 지능이 있지만, 그들이 공동체로 있을 때는
+          개인적인 지능은 포기하고 중앙의 목소리에 반응합니다.
+          공동체는 무언가를 대표하는데요.
+          그것을 유기체라고 부르 그 공동체 안에서 세포는 반드시 중앙의 목소리에 따라야 합니다.
+          만약 중앙의 목소리가 죽으라고 말하면 세포는 죽습니다.
+          중앙의 목소리는 바로 마음입니다.
+          저는 마음에 있는 두 개의 본질과
+          우리 인생을 컨트롤하는 것이 왜 때로는 힘든지 말하고자 합니다.
+          마음이 어떻게 작동하는지에 대해 말씀드리고 싶습니다.
+          첫째, 내부환경과 외부환경으로부터의 신호가 있습니다.
+          뇌의 기능은 그 신호를 인지하는 것입니다.
+          그런 다음 그 신호들을 해석해서
+          행동을 컨트롤하기 위해 그 정보를 세포로 보냅니다.
+          그래서 뇌의 기능은 인식이고, 그 인식으로부터 마음을 창조합니다.
+          통계를 보면, 수술을 포함한 의학적 칠료의 1/3은 플라시보 효과의 결과라고 합니다.
+          부정적인 생각이 있는 경우 이것을 노시보 효과라고 부릅니다.
+          긍정적 생각이 당신을 치료하는 같은 힘으로
+          부정적인 생각이 당신을 죽일 수도 있죠.
+          이 둘은 같은 효과인데, 하나는 더 긍정적이고 하나는 더 부정적인 것이죠.
+          하지만 그 효과는 당신의 건강과 정확하게 일치합니다.
+          하나는 당신을 치료하고, 다른 하나는 아프게 할 것입니다.
+          요점은 부정적인 생각이 모든 화학적 치료의 효과를 만들 수 있다는 것입니다.
+          한번 생각해보세요. 만약 의사가 당신에게 병이 있다거나
+          혹은 당신이 죽을 것이라고 말했다면 당신은 그 의사를 믿습니다.
+          왜냐하면 전문가이기 때문이죠.
+          그 믿음이 당신에게 질병을 주게되고 당신을 죽게 할 수 있습니다.
+          미국의 남부에는 침례교 종교단체가 있는데
+          이들은 스스로를 종교적인 활홀감에 올려놓고
+          신이 그들을 지켜줄거라 믿습니다.
+          그래서 그들은 방울뱀과 같은 독사를 이용하기도 합니다.
+          그리고 심지어 뱀에 물린다 해도 그들에겐 아무 일도 일어나지 않습니다.
+          그들 중 일부가 독성물질 스트리크나인을 중독량만큼 마셨지만
+          그들이 믿음 상태에 있으면 독은 그들에게 영향을 주지 못합니다.
+          그럼 당신이 독을 마실 수도 있는데
+          왜 우리는 독, 음식, 공기 등 모든 것에 그렇게 걱정하는 걸까요?
+          왜냐하면 그 독성이 우리를 죽일 수 있다는 믿음을 가지고 있기 때문입니다.
+          하지만 이 사실을 알고 있어도 저는 절대 스트리크나인을 마시지 않을 겁니다.
+          왜일까요?
+          왜나하면 저의 믿음은 그들의 믿음만큼 강하지 않기 때문입니다.
+          그래서 우리가 더 강한 믿음으로 프로그램되어 성장한다면
+          우리는 지금보다 더 강력한 존재가 될 것입니다.
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=aVGLiUBLY3E" target="_blank" title="감옥탈출">
+        내가 모르던 세상으로|보이지 않는 감옥에서 나오기</a>
+
+        <p>
+          [지적 대화를 위한 넓고 얉은 지식0]
+          일원론과 이원론, 둘 중 어느 것이 옮거나 틀린 것이 아닙니다.
+          어떤 순간의 삶엔 이원론이
+          또 어떤 순간의 삶에는 일원론이 필요할 겁니다.
+          때로는 내면 속으로 침잠할 필요가 있습니다.
+          세계는 곧 나의 마음이며
+          나와 세계는 분리되지 않습니다.
+        </p>
 
 
 
