--- a/3_youtube_study.html
+++ b/3_youtube_study.html
@@ -276,7 +276,12 @@
       </p>
 
     <a href="https://www.youtube.com/watch?v=NTDhBh1SdZ4" target="_blank" title="AWS vs. Heroku">
-      AWS를 쓸까? Heroku를 쓸까? 그 선택의 기준은?</a>
+      AWS를 쓸까? Heroku를 쓸까? 그 선택의 기준은?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=S-01KjUJ3_Q" target="_blank" title="Rust">
+      과연 이 언어가 C.C++을 대체할 수 있을까? feat.아마존</a>
+
+
 
 
 
@@ -302,6 +307,9 @@
 
     <a href="https://www.youtube.com/watch?v=wcMe3vpZe28&list=PLLcbGhhl4sQBIPHbSmmYmrCapsfqThJnw&index=3&t=0s" target="_blank" title="자료구조">
       (자료구조)스택 C언어로 코딩해요</a><br>
+
+    <a href="https://www.youtube.com/watch?v=xPpmxNPyznY" target="_blank" title="머신러닝">
+      인공지능 그리고 머신러닝의 모든 것</a>
 
 
   <h2>슈카월드</h2>
@@ -341,6 +349,9 @@
 
     <a href="https://www.youtube.com/watch?v=vMgcTTE_YQI" target="_blank" title="불닭볶음면">
       한국산 불닭볶음면, 세계 라면계를 강타하다!?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=j7ziZoxpb6M" target="_blank" title="메인사이트">
+      메인사이트의 다변화와 이커머스 시장의 Hot 키워드-컨텐츠, 커뮤니티</a><br>
 
   <h2>에스오디</h2>
 
