--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -135,9 +135,14 @@
          영화계 인사들에게 많이 알려져 있고 또 극찬 받는 개발자가 됐습니다.
        </p>
 
-      <a href="" target="_blank" title="리니지2M">
+      <a href="https://www.youtube.com/watch?v=5E2yZf_kK5E" target="_blank" title="리니지2M">
         상식적으로는 이해불가능한 상황. 리니지2M은 왜 잘 나갈까</a><br>
 
+      <a href="https://www.youtube.com/watch?v=s4tGCa74ZVE" target="_blank" title="S4리그">
+        유럽 TPS 1위한 국산겜, 'S4리그'가 망한 이유</a><br>
+
+      <a href="https://www.youtube.com/watch?v=ZvcG8UToiM0" target="_blank" title="히오스">
+        블리자드가 포기한(?) 게임, 히어로즈 오브 더 스톰 이야기</a><br>
         
 
     <br>
