--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -47,8 +47,22 @@
       </p>
 
     <a href="https://www.youtube.com/watch?v=QDhAXJnQ-EY" target="_blank" title="PER, PBR">
-      PER, PBR이랑 무엇인가</a>
-      
+      PER, PBR이랑 무엇인가</a><br><br>
+
+    <a href="https://www.youtube.com/watch?v=glzs8F_UGi4" target="_blank" title="종목선정">
+      기본적 분석 - 종목 선정 발굴할 때의 체크리스트</a>
+
+      <p>
+        1. 최근 수년간 매출/손익 지속 성장 혹은 전년비 급격히 매출/손익 개선된 종목<br>
+        2. 기업 가치에 비해 저평가(PER, PBR)된 종목<br>
+        3. 차트<br>
+        4. 배당을 실시하는 종목<br>
+        5. 현금흐름표 상에서 영업, 투자, 재무 현금흐름이 건전한지<br>
+        6. 거래량이 많은 종목<br>
+      </p>
+
+    <a href="https://www.youtube.com/watch?v=InJmeRHovTk" target="_blank" title="유료리딩방">
+      충격! 유료 리딩방 사기사례 분석</a>
 
 
       <ol class="table">
