--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </ol>
   -->
 
+
   <div id="contents">
     <img src="Warofgenesis_iolin.jpg" width="100%">
 
@@ -47,6 +48,16 @@
       frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
 
+
+    <input type="button" value="pink" onclick="
+      document.querySelector('body').style.backgroundColor = 'pink';
+    ">
+    <input type="button" value="skyblue" onclick="
+      document.querySelector('body').style.backgroundColor = 'skyblue';
+    ">
+
+
+    <br><br>
     <input type="checkbox">
     <input type="checkbox">
     <input type="checkbox">
