--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -48,7 +48,8 @@
     <h3><strong>심리학</h3></strong>
       [나도 아직 나를 모른다]-허지원
     <h3><strong>처세술</h3></strong>
-      [침묵이라는 무기]-코르넬리아 토프
+      [침묵이라는 무기]-코르넬리아 토프<br>
+      [마음을 훔치는 대화법]-임철웅
     <h3><strong>과학</h3></strong>
       [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트
     <h3><strong>경영</h3></strong>
@@ -59,9 +60,20 @@
       [삼국지]-나관중
     </p></pre>
 
-    <p style="margin-top:45px;"><pre>
+
+    <p><pre>
+      <h2>2020년 1월 독서</h2>
+        <li>경제:</li>
+        <li>역사:</li>
+        <li>철학:</li>
+        <li>심리학/처세술: [마음을 훔치는 대화법]-임철웅</li>
+        <li>과학:</li>
+
+    </p></pre>
+
+    <p><pre>
       <h2>2019년 12월 독서</h2>
-        <li>경제: [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
+        <li>경제: [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척</li>
         <li>역사: [약자를 위한 현실주의]-이주희</li>
         <li>철학: [내 안의 나를 깨우는 장자 외편]-장자</li>
         <li>심리학/처세술: [나도 아직 나를 모른다]-허지원</li>
