--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -143,7 +143,9 @@
 
       <a href="https://www.youtube.com/watch?v=ZvcG8UToiM0" target="_blank" title="히오스">
         블리자드가 포기한(?) 게임, 히어로즈 오브 더 스톰 이야기</a><br>
-        
+
+      <a href="https://www.youtube.com/watch?v=_bcwhYkEXJY" target="_blank" title="에이펙스">
+        EA는 얘가 잘 나갈 거라곤 상상도 못했다|에이펙스</a><br>
 
     <br>
 
