--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -678,6 +678,69 @@
           나와 세계는 분리되지 않습니다.
         </p>
 
+      <a href="https://www.youtube.com/watch?v=kXHamk-r51o&list=WL&index=2&t=0s" target="_blank" title="대운">
+        대운이 찾아올 때를 대비해 미리 준비하라</a>
+
+        <p>
+          * 운의 상승기와 운의 하강기<br>
+          <맹자 고자편 15장><br>
+          하늘이 장차 어떤 사람에게 큰 임무를 맡기려 할 때에는
+          반드시 먼저 그 사람의 마음과 뜻을 괴롭히고
+          뼈와 근육을 고통스럽게 하며, 신체와 피부를 굶주리게 하고
+          육신을 궁핍하게 만들어 그가 소망하는 것들을 어지럽힌다.
+          이렇게 하는 까닭은 그 마음을 분발시키고 성질을 참게 하여
+          이제까지는 해낼 수 없었던 제 아무리 큰 역할이라도
+          충분히 이겨낼 수 있도록 하기 위함이다.<br>
+
+          운의 상승기에는 행운을 비축할 줄 알아야 하며
+          자신을 앞세우지 말고 더 겸손해야 한다.
+          운의 하강기에는 참고 기다려야 한다.
+          운의 하강기에 견디는 저력을 기르다 보면
+          어느날 과거의 치욕이 현재의 영광으로 변해 있을 것이다.<br>
+
+          * 원한을 사지 마라<br>
+          다퉈서 좋은 일은 아무 것도 없다.
+          분쟁으로 손에 넣은 돈은 곧 잃게 된다.
+          운을 좋게 하려면 다툼을 없애야 한다.
+          이기든 지든 원한이 남기 때문.
+          남의 원한을 사면 운이 달아날 수밖에 없다.<br>
+
+          * '운'을 붙잡고 싶다면 '도덕과학'을 알아야 한다<br>
+          도덕과학은 한 인간이 살아 있는 한 도덕적 과실을 저지를 수 밖에 없다는 이론이다.
+          우리는 누군가의 덕분으로 살아간다.
+          도덕과학에서는 이를 '도덕적 부채'라고 부른다.
+          이 도덕적 부채를 그냥 내버려두면 운이 달아난다.
+          도덕적 부채를 인지하고 항상 감사하는 마음을 가지면 운이 달아나는 것을 막을 수 있다.
+          도덕적 과실을 깨닫는 것, 은혜에 감사하는 것, 도덕적 부채를 갚는 것.
+          이를 실행하면 불운이 사라지고 행운으로 바뀌게 된다.<br>
+
+          * 악행으로 얻은 성공은 오래가지 못한다<br>
+          하늘의 법망은 크고 넓어서 빠져나갈 수 있을 것 같지만
+          악인은 빠짐없이 걸러낸다.
+          진짜 행운은 오래 지켜보아야 알 수 있다.<br>
+
+          * 운은 인덕으로 결정된다<br>
+          인간성이 좋은 사람일수록 운이 좋다.<br>
+          "천작을 갈고 닦으면 인작이 저절로 따라온다" - 맹자<br>
+          천작: 하늘이 준 지위 / 덕<br>
+          인작: 세상에서의 지위 / 부, 학력, 지력, 권력<br>
+
+          *운을 가져오는 것은 사람이다<br>
+          타인과의 관계가 좋으면 운이 트인다.
+          사람을 사귀는 방식의 차이가 인간관계의 차이를 만들고,
+          나아가서는 운이 좋고 나쁨에도 영향을 미치게 된다.
+          사람을 사귀는데 근본이 되는 것이 '말'이다.
+          남을 배려하는 말, 격려하는 말, 칭찬하는 말.<br>
+
+          "선을 쌓는 집에는 반드시 좋은 일이 있다" - 역경
+
+
+
+
+
+
+
+
 
 
 
