--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -62,8 +62,14 @@
       </p>
 
     <a href="https://www.youtube.com/watch?v=InJmeRHovTk" target="_blank" title="유료리딩방">
-      충격! 유료 리딩방 사기사례 분석</a>
+      충격! 유료 리딩방 사기사례 분석</a><br><br>
 
+    <a href="https://www.youtube.com/watch?v=-sELP_iUSWo" target="_blank" title="ESP와 PER">
+      ESP와 PER을 이용한 적정주가계산하기</a>
+
+      <p>
+        주식은 예측이 아니라 대응이다
+      </p>
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
