--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -314,10 +314,43 @@
           Genius leaves clue that is not a mystery.
           먼저 당신이 습관을 들이면 습관은 당신을 창조합니다.<br><br>
 
-      <a href="" target="_blank" title="브루스 립튼">
-        가난과 부자가 어떻게 프로그램되는지 설명합니다</a>
+      <a href="https://www.youtube.com/watch?v=DILAg32rCmE" target="_blank" title="브루스 립튼">
+        우리가 태어나서 어떻게 프로그램되는지 알아야 합니다|브루스 립튼</a>
 
           <p>
+            당신의 인생은 잠재된 의식 행동의 인쇄물입니다.
+            그래서 가난한 사람들은 가난해지고 부자들은 부자가 되는 겁니다.
+            우리 인생의 95%는 7살 때까지 만들어 삶의 프로그램에서 나옵니다.
+            영화 '매트릭스'는 공상과학 영화가 아니라 다큐멘터리입니다.
+            사실, 모든 사람의 인생 첫 7년은 최면을 다운받는 겁니다.
+            7세 이하 아이들의 뇌는 진동 주파수가 낮습니다.
+            머리에 뇌 활동을 감지하는 뇌파검사기를 부착하면 알 수 있죠.
+            7세 이하 아이는 의식상태보다 낮은 주파수대를 가지고 있죠.
+            그것을 세타(파)라고 합니다.
+            세타는 상상 영역입니다.
+            아이들이 찰흙으로 만든 파이로 파티를 하듯이요.
+            그러나 그들에겐 진짜 상황입니다.
+            아이가 빗자루를 탑니다.
+            그것이 세타, 상상입니다.
+            세타는 또한 최면과 같습니다.
+            그 생각은 의식이 만들어지기 전입니다.
+            당신이 그 어떤 프로그램도 없다면 무엇을 인식할 수 있을까요?
+            그래서 자연은 삶의 처음 7년을 만들었죠.
+            이 행성에서 살기 위해 어떤 프로그램이 필요한지 알도록 말이죠.
+            그것을 어떻게 얻을 수 있을까요?
+            세타는 최면이죠. 그냥 보는 겁니다.
+
+            우리 인생의 95%는 잠재의식의 프로그램에서 오는 것입니다.
+            매일매일 삶의 5%만이 의식을 사용하죠. 그것이 창의성입니다.
+
+            의식적 마인드는 창조적이고, 어떤 방법으로든 배울 수 있죠.
+            책도 읽고, 강의도 가고, 이런 동영상을 듣는 방법을 통해서요.
+            그를 통해 의식적 마인드는 깨달음을 얻게 됩니다.
+            하지만 잠재적인 마인드는 그런식으로 배우지 않아요.
+            잠재적인 마인드는 두 가지 근본적인 방법으로 배웁니다.
+            태어나서 7년은 최면이고, 7살 이후는 어떻게 새로운 프로그램을 넣을까요?
+            반복과 연습입니다.
+
             그래서 잠재적 마인드를 훈련시키는 방법은 2가지입니다.
             최면과 반복입니다.
             저는 반복을 좋아하는데 "Fake it till you make it"라는 문구 때문입니다.
@@ -562,7 +595,7 @@
         앞서가는 사람들의 비밀 | 즉각적인 만족에서 벗어나기</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=hVIHsDGrPgM" target="_blank" title="브루스립튼">
-        블스 립튼 박사 | 동기부여</a>
+        브루스 립튼 박사 | 동기부여</a>
 
         <p>
           당신은 50조의 세포로 이루어져 있습니다.
@@ -733,11 +766,6 @@
           남을 배려하는 말, 격려하는 말, 칭찬하는 말.<br>
 
           "선을 쌓는 집에는 반드시 좋은 일이 있다" - 역경
-
-
-
-
-
 
 
 
