--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -66,7 +66,7 @@
         <li>경제:</li>
         <li>역사:</li>
         <li>철학:</li>
-        <li>심리학/처세술: [마음을 훔치는 대화법]-임철웅</li>
+        <li>심리학/처세술:
         <li>과학:</li>
 
     </p></pre>
@@ -85,6 +85,7 @@
         <li>소설: [잠]-베르나르 베르베르</li>
         <li>소설: [삼국지]-나관중</li>
         <li>경제: [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척</li>
+        <li>처세술: [마음을 훔치는 대화법]-임철웅</li>
     </p></pre>
 
     <p><pre>
