--- a/3_youtube_study.html
+++ b/3_youtube_study.html
@@ -353,10 +353,16 @@
     <a href="https://www.youtube.com/watch?v=j7ziZoxpb6M" target="_blank" title="메인사이트">
       메인사이트의 다변화와 이커머스 시장의 Hot 키워드-컨텐츠, 커뮤니티</a><br>
 
+    <a href="https://www.youtube.com/watch?v=W-ZARauLKc8" target="_blank" title="블록체인">
+      블록체인 기술이 꿈꾸는 미래시장 거래 시스템의 변화</a>
+
   <h2>에스오디</h2>
 
     <a href="https://www.youtube.com/watch?v=cI1lGlCSkIQ" target="_blank" title="신기술">
       삼성의 비장의 무기, 모든 학과가 투입되는 신의 기술</a>
+
+    <a href="https://www.youtube.com/watch?v=s5ycTo0JCCw&list=WL&index=3&t=0s" target="_blank" title="Bioprinting">
+      중국이 만들어낸 미친 물질... 한계를 뛰어넘은 중국의 소름돋는 기술력</a>
 
 
   <br>
