--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -147,6 +147,9 @@
       <a href="https://www.youtube.com/watch?v=_bcwhYkEXJY" target="_blank" title="에이펙스">
         EA는 얘가 잘 나갈 거라곤 상상도 못했다|에이펙스</a><br>
 
+      <a href="https://www.youtube.com/watch?v=aWi_3bns-Mw&list=WL&index=14&t=0s" target="_blank" title="게임기대작">
+        2020년 모바일 게임 기대작 TOP5</a><br>
+
     <br>
 
     <ol class="table">
