--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -71,6 +71,24 @@
         주식은 예측이 아니라 대응이다
       </p>
 
+    <a href="https://www.youtube.com/watch?v=JbR4r1OEms4" target="_blank" title="박영옥">
+      주식으로 2000억을 번 "주식농부" 박영옥</a>
+
+      <p>
+        박영옥씨가 투자하기 전에 점검하는 8가지<br>
+        1. 업종의 전망이 밝은가<br>
+        2. 사업 모델이 심플한가<br>
+        3. 재무구조는 안정적이고 심플한가<br>
+        4. 업종 내에서 경쟁력이 있는가<br>
+        5. 적정한 수준의 배당을 해 왔는가<br>
+        6. 성실 공시를 하는가<br>
+        7. 경영자는 누구인가<br>
+        8. 그럼에도 불구하고 저평가되어 있는가
+      </p>
+
+
+
+
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
         <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
