--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -765,7 +765,17 @@
           사람을 사귀는데 근본이 되는 것이 '말'이다.
           남을 배려하는 말, 격려하는 말, 칭찬하는 말.<br>
 
-          "선을 쌓는 집에는 반드시 좋은 일이 있다" - 역경
+          "선을 쌓는 집에는 반드시 좋은 일이 있다" - 역경<br><br>
+
+      <a href="https://www.youtube.com/watch?v=eDNTuDBqHSY&list=WL&index=6&t=0s" target="_blank" title="화">
+        화를 다스리는 법|아주대학교 김경일 교수</a><br>
+
+      <a href="https://www.youtube.com/watch?v=VpSc7U2UQow&list=WL&index=21&t=0s" target="_blank" title="원하는것">
+        원하는 것이 있다면 반드시 이것부터 하라</a>
+
+        <p>
+          [기획은 2형식이다] - 남충식
+        </p>
 
 
 
