--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -46,7 +46,8 @@
     <h3><strong>철학</h3></strong>
       [내 안의 나를 깨우는 장자 외편]-장자
     <h3><strong>심리학</h3></strong>
-      [나도 아직 나를 모른다]-허지원
+      [나도 아직 나를 모른다]-허지원<br>
+      [죽기 전에 한 번은 심리학을 만나라]-서상원
     <h3><strong>처세술</h3></strong>
       [침묵이라는 무기]-코르넬리아 토프<br>
       [마음을 훔치는 대화법]-임철웅
@@ -86,6 +87,7 @@
         <li>소설: [삼국지]-나관중</li>
         <li>경제: [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척</li>
         <li>처세술: [마음을 훔치는 대화법]-임철웅</li>
+        <li>심리학: [죽기 전에 한 번은 심리학을 만나라]-서상원</li>
     </p></pre>
 
     <p><pre>
