--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -150,6 +150,12 @@
       <a href="https://www.youtube.com/watch?v=aWi_3bns-Mw&list=WL&index=14&t=0s" target="_blank" title="게임기대작">
         2020년 모바일 게임 기대작 TOP5</a><br>
 
+      <a href="https://www.youtube.com/watch?v=5cIgvchvwI8&list=WL&index=5&t=0s" target="_blank" title="신작게임">
+        대한민국의 희망(이라고 불리는) 개발사의 신작게임</a><br>
+
+      <a href="https://www.youtube.com/watch?v=YfGHNpkk8Bg" target="_blank" title="위쳐">
+        위쳐는 넷플릭스 드라마가 되고, 눈마새는 안되는 이유</a><br>
+
     <br>
 
     <ol class="table">
