--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -86,7 +86,11 @@
         8. 그럼에도 불구하고 저평가되어 있는가
       </p>
 
+    <a href="https://www.youtube.com/watch?v=twQRwANIgAA" target="_blank" title="개미">
+      개미투자자가 세력을 이길 수 있는 방법</a>
 
+    <a href="https://www.youtube.com/watch?v=-HXT1KVk2Og" target="_blank" title="삼박자 투자법">
+      고수열전, 투자의 신 - 투자원금의 200배 수익, 슈퍼개미 이세무사 이정윤의 삼박자 투자법</a>
 
 
       <ol class="table">
