--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
       frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
 
-
     <input type="button" value="pink" onclick="
-      document.querySelector('body').style.backgroundColor = 'pink';
+      var target = document.querySelector('body');
+      if(this.value==='pink'){
+        target.style.backgroundColor = 'pink';
+        this.value = 'white';
+      } else {
+        target.style.backgroundColor ='white';
+        this.value = 'pink';
+      }
     ">
-    <input type="button" value="skyblue" onclick="
-      document.querySelector('body').style.backgroundColor = 'skyblue';
-    ">
-
 
     <br><br>
     <input type="checkbox">
