--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -777,9 +777,8 @@
           [기획은 2형식이다] - 남충식
         </p>
 
-
-
-
+      <a href="https://www.youtube.com/watch?v=bGTpDWzCt3U&list=PLN_JDM9x5i2junx0G7ACRnpUaiq-DGm8w" target="_blank" title="브루스립튼">
+        무의식 리프로그램|브루스 립튼</a>
 
 
 
