--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -156,6 +156,43 @@
       <a href="https://www.youtube.com/watch?v=YfGHNpkk8Bg" target="_blank" title="위쳐">
         위쳐는 넷플릭스 드라마가 되고, 눈마새는 안되는 이유</a><br>
 
+      <a href="https://www.youtube.com/watch?v=MR1LeaipBjY" target="_blank" title="게임질병">
+        게임질병? 우리가 언제까지나 게임을 즐겨도 괜찮은 이유</a>
+
+        <p>
+          독일의 유명한 극작가, 베르톨트 브레히트는 이런 유명한 말을 남겼습니다.
+          "인간은 예술을 통해 삶을 즐기고, 즐거움은 삶의 의지를 강화시킨다."
+          여러분이 게임과 같은 문화예술을 통해 삶이 더 즐거워지고
+          그 즐거움 덕분 하루하루를 더 살아갈 의지가 생겨난다면
+          이 즐거움으로 내일 하루가 더욱 기다려지게 된다면
+          당신에게 있어 게임은 더 이상 시간낭비가 아닙니다.
+          꼭 반드시 의미가 있거나 교훈을 주는 게임이 아니어도 좋습니다.
+          내일은 얼마나 실력이 올랐을까 기대가 된다면
+          내일은 어떤 아이템을 얻게 될까 설렌다면
+          내일은 어떤 경험과 어떤 모험을 하게 될지 그 생각만으로 행복해진다면
+          도저히 이 기대작들을 해보기 전까지 죽을 수 없다면
+          당신에게 있어 게임은 더 이상 해악 질병도 아닙니다.
+          내 삶까지 내팽개치면서 중독적으로 즐기는 게임이 아니라
+          게임을 자신의 삶을 더욱 충실하게 만들어줄 윤활제로 사용한다면
+          게임은 이미 여러분의 삶을 더욱 재밌고 내일을 기대하게 만드는
+          재미 그 자체만으로도 가치가 있는
+          훌륭한 문화예술이 되어있을테니까요.
+          재미를 느끼는데 죄의식을 느낄 필요는 없습니다.
+          재미는 인간됨의 핵심이고
+          재미를 주는 게임은 인간의 발전에 너무나도 중요하기 때문입니다.
+          게임을 통해, 더욱 재밌는 삶을 사세요.
+          게임을 통해, 더욱 행복해지세요.
+          그것이야말로, 게임이 주는 재미의 진정한 가치이고
+          그것이야말로, 게임의 존재의의이며
+          내가, 그리고 우리가 게이머의 삶을 선택한 이유이기 때문입니다.<br>
+          Reference - [라프 코스터의 재미 이론]
+        </p>
+
+
+
+
+
+
     <br>
 
     <ol class="table">
