--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -92,6 +92,10 @@
     <a href="https://www.youtube.com/watch?v=-HXT1KVk2Og" target="_blank" title="삼박자 투자법">
       고수열전, 투자의 신 - 투자원금의 200배 수익, 슈퍼개미 이세무사 이정윤의 삼박자 투자법</a>
 
+    <a href="https://www.youtube.com/watch?v=hNbtK9Hhn7c" target="_blank" title="매매일지">
+      주식투자에서 성공을 하기 위해서 반드시 매매일지를 작성하자</a>
+
+
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
