--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -768,7 +768,7 @@
           "선을 쌓는 집에는 반드시 좋은 일이 있다" - 역경<br><br>
 
       <a href="https://www.youtube.com/watch?v=eDNTuDBqHSY&list=WL&index=6&t=0s" target="_blank" title="화">
-        화를 다스리는 법|아주대학교 김경일 교수</a><br>
+        화를 다스리는 법|아주대학교 김경일 교수</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=VpSc7U2UQow&list=WL&index=21&t=0s" target="_blank" title="원하는것">
         원하는 것이 있다면 반드시 이것부터 하라</a>
@@ -778,7 +778,10 @@
         </p>
 
       <a href="https://www.youtube.com/watch?v=bGTpDWzCt3U&list=PLN_JDM9x5i2junx0G7ACRnpUaiq-DGm8w" target="_blank" title="브루스립튼">
-        무의식 리프로그램|브루스 립튼</a>
+        무의식 리프로그램|브루스 립튼</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=INN98oQXSiI" target="_blank" title="동기부여">
+        사람을 움직이게 만드는 두 가지의 강력한 심리</a>
 
 
 
