--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -39,7 +39,9 @@
       [대한민국 부동산 흐름 읽는법]-신진수<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
-      [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척
+      [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
+      [앞으로 10년 경제 대위기가 온다]-정동희<br>
+      [부의 본능]-브라운스톤
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희
@@ -64,12 +66,13 @@
 
     <p><pre>
       <h2>2020년 1월 독서</h2>
-        <li>경제:</li>
+        <li>경제: [앞으로 10년 경제 대위기가 온다]-정동희</li>
         <li>역사:</li>
         <li>철학:</li>
-        <li>심리학/처세술:
+        <li>심리학/처세술:</li>
         <li>과학:</li>
-
+        <br>
+        <li>경제: [부의 본능]-브라운스톤</li>
     </p></pre>
 
     <p><pre>
