--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -188,10 +188,44 @@
           Reference - [라프 코스터의 재미 이론]
         </p>
 
+      <a href="https://www.youtube.com/watch?v=W1e3iGOE4Ss" target="_blank" title="최고게임">
+        지난 10년 동안 출시한 게임 중 최고의 게임은 무엇일까?</a>
 
+        <p>
+          <아쉬운 순위권 밖><br>
+          더워킹데드시즌1(2012)
+          디스아너드(2012)
+          바이오쇼크:인피니티(2013)
+          드래곤에이지:인퀴지션(2014)
+          미들어스:쉐도우오브모르도르(2014)
+          폴아웃4(2015)
+          언차티드4:해적왕과최후의보물(2016)
+          오버워치(2016)
+          호라이즌제로던(2017)
+          몬스터헌터:월드(2018)<br><br>
 
-
-
+          21 언더테일(2015)<br>
+          20 데스티니(2014)<br>
+          19 마블's스파이더맨(2018)<br>
+          18 포켓몬GO(2016)<br>
+          17 둠(2016)<br>
+          16 슈퍼마리오오디세이(2017)<br>
+          15 저니(2012)<br>
+          14 레드데드리뎀션(2010)<br>
+          13 포트나이트(2018)<br>
+          12 블러드본(2015)<br>
+          11 포탈2(2011)<br>
+          10 갓오브워(2018)<br>
+          9 레드데드리뎀션2(2018)<br>
+          8 GTA5(2013)<br>
+          7 메스이펙트2(2010)<br>
+          6 마인크래프트(2011)<br>
+          5 다크소울(2011)<br>
+          4 더위쳐3:와일드헌트(2015)<br>
+          3 더라스트오브어스(2013)<br>
+          2 더엘더스크롤5:스카이림(2011)<br>
+          1 젤다의전설:야생의숨결(2017)<br>
+        </p>
 
     <br>
 
