--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -87,14 +87,16 @@
       </p>
 
     <a href="https://www.youtube.com/watch?v=twQRwANIgAA" target="_blank" title="개미">
-      개미투자자가 세력을 이길 수 있는 방법</a>
+      개미투자자가 세력을 이길 수 있는 방법</a><br>
 
     <a href="https://www.youtube.com/watch?v=-HXT1KVk2Og" target="_blank" title="삼박자 투자법">
-      고수열전, 투자의 신 - 투자원금의 200배 수익, 슈퍼개미 이세무사 이정윤의 삼박자 투자법</a>
+      슈퍼개미 이세무사 이정윤의 삼박자 투자법</a><br>
 
     <a href="https://www.youtube.com/watch?v=hNbtK9Hhn7c" target="_blank" title="매매일지">
-      주식투자에서 성공을 하기 위해서 반드시 매매일지를 작성하자</a>
+      주식투자에서 성공을 하기 위해서 반드시 매매일지를 작성하자</a><br>
 
+    <a href="https://www.youtube.com/watch?v=zLF7hZz_tic" target="_blank" title="손명완">
+      영남권의 대표 슈퍼개미|손명완 세광무역 대표</a>
 
 
       <ol class="table">
