--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -781,7 +781,21 @@
         무의식 리프로그램|브루스 립튼</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=INN98oQXSiI" target="_blank" title="동기부여">
-        사람을 움직이게 만드는 두 가지의 강력한 심리</a>
+        사람을 움직이게 만드는 두 가지의 강력한 심리</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=NuL7bVL1Okc&list=WL&index=2&t=0s" target="_blank" title="사주명리학">
+        20년 연구 끝에 알아낸 '운명을 바꾸는 6가지 방법'</a><br>
+
+        <p>
+          1. 적선을 많이 하라(주변 사람들이 자기에게 우호적인 감정을 갖도록 투자)<br>
+          2. 눈이 밝은 스승을 만나라(스승은 제자가 발 벗고 찾아나서야 만날 수 있다)<br>
+          3. 독서에 몰두하라<br>
+          4. 브레이크를 밟고 명상하라<br>
+          5. 명당을 선택하라<br>
+          6. 자신의 사주팔자를 알아라
+        </p>
+
+
 
 
 
