--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -227,6 +227,9 @@
           1 젤다의전설:야생의숨결(2017)<br>
         </p>
 
+      <a href="https://www.youtube.com/watch?v=uWBOsmN8nlc" target="_blank" title="블소">
+        착한 게임 블레이드앤소울은 어쩌다 변해버렸을까</a><br>
+
     <br>
 
     <ol class="table">
