--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -98,6 +98,26 @@
     <a href="https://www.youtube.com/watch?v=zLF7hZz_tic" target="_blank" title="손명완">
       영남권의 대표 슈퍼개미|손명완 세광무역 대표</a>
 
+    <a href="https://www.youtube.com/watch?v=QYK6Jr86kiw" target="_blank" title="워렌버핏">
+      오마하의 현인 워렌버핏 이야기</a>
+
+      <p>
+        버핏이 투자하고 싶은 기업<br>
+        1. 사업을 이해할 수 있어야 한다(자신의 능력범위를 이해)<br>
+        2. 장기 경제성이 좋아야 한다(경제적 해자 보유 - 브랜드가치, 뛰어난 원가 절감 등 경쟁사 대비 비교 우위)<br>
+        3. 경영진이 유능하고 믿을 수 있어야 한다<br>
+        4. 인수 가격이 합리적이어야 한다(안전마진)<br><br>
+
+        사업을 이해하기 위한 능력 범위(Circle of Competence)<br>
+        전문가가 아니어도 만족스러운 투자수익을 얻을 수 있습니다.
+        그러나 전문가가 아니라면 자신의 한계를 인식하고 확실한 방법을 선택해야 합니다.<br><br>
+
+        다른 사람들이 욕심을 부릴 때 두려워하고,
+        다른 사람들이 두려워할 때 욕심을 부려라.<br>
+        Be fearful when others are greedy
+        and greedy when others are fearful.
+      </p>
+
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
