--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -795,6 +795,8 @@
           6. 자신의 사주팔자를 알아라
         </p>
 
+      <a href="https://www.youtube.com/watch?v=hZzSRMvQjqg&list=WL&index=6" target="_blank" title="조던피터슨">
+        세상을 구한 남자, 조던 피터슨 이야기</a><br>
 
 
 
