--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -230,6 +230,9 @@
       <a href="https://www.youtube.com/watch?v=uWBOsmN8nlc" target="_blank" title="블소">
         착한 게임 블레이드앤소울은 어쩌다 변해버렸을까</a><br>
 
+      <a href="https://www.youtube.com/watch?v=pnXCTOIc8Po&list=WL&index=3&t=0s" target="_blank" title="2020년 1월 게임">
+        2020년 1월 신작게임 기대작 TOP5</a><br>
+
     <br>
 
     <ol class="table">
