--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -118,6 +118,28 @@
         and greedy when others are fearful.
       </p>
 
+    <a href="https://www.youtube.com/watch?v=vLjL82VYPkQ&t=1s" target="_blank" title="김봉수교수">
+        4억으로 500억을 번 카이스트 김봉수 교수</a>
+
+        <p>
+          김봉수 교수의 투자 원칙<br>
+          1. 자기자본 이율(ROE)이 높고, 실질 주가순자산비율(PBR)이 낮은 회사를 눈 여겨 보라<br>
+          자산이 우량한 기업을 3년 이상 장기투자하면 만족할 수익을 거둘 수 있다<br>
+          2. 비즈니스 모델이든 자산이든 기업가치가 높은 회사를 선택하라<br>
+          3. 생활 속에서 당신이 납득할 만한 종목을 찾아라<br>
+          4. 정부 정책과 대주주의 성향을 읽어라<br>
+          5. 종목을 골랐더라도 한 달은 공부하고 투자하라<br>
+          6. 추격 매수는 하지 마라. 차라리 분할 매수하라<br>
+          7. 단기적인 주가 흐름에 휘둘리지 마라<br>
+          단기적으로 매력적인 주식은 매수경쟁이 치열, 장기적으로 매력적인 주식을 저가에 산다<br>
+          8. 자기가 이해할 수 있는 좋은 회사를 찾아서 3년 이상 묻어둬라<br>
+          9. 추천 서적 4권<br>
+          - 돈, 뜨겁게 사랑하고 차갑게 다루어라 - 앙드레 코스톨라니<br>
+          - 월가의 영웅 - 피터 린치<br>
+          - 현명한 투자자 - 벤자민 그레이엄<br>
+          - 위대한 기업에 투자하라 - 필립 피셔<br>
+
+
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
