--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -41,7 +41,8 @@
       [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [앞으로 10년 경제 대위기가 온다]-정동희<br>
-      [부의 본능]-브라운스톤
+      [부의 본능]-브라운스톤<br>
+      [빅스텝]-박혜정
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희
@@ -73,6 +74,7 @@
         <li>과학:</li>
         <br>
         <li>경제: [부의 본능]-브라운스톤</li>
+        <li>경제: [빅스텝]-박혜정</li>
     </p></pre>
 
     <p><pre>
